--- a/Index.html
+++ b/Index.html
@@ -57,13 +57,14 @@
         </section>
 
         <section class="mt-4">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
+            <div class="container-fluid">
+                <div class="row justify-content-center">
+                    <div class="col-12 ml-3">
                     <h2 style="font-weight: bold;">Choose a service you want</h2>
                     </div>
 
-                    <div class="col-3 mt-4" style="width: 50px;" id="adopt">
+                    <div class="row ml-4" style="width: 1300px;">
+                    <div class="col-3 mt-4" id="adopt">
                         <h3 class="text-uppercase text-center mt-4" style="background: white; border-radius: 10px; color: #99CACD;">Adopt</h3>
                         <p class="pt-3">Tincidunt dignissim quisque in turpisut nulla eu et. Id eget sit eleifend accumsan lobortis ullamcorper. Odio risus cras in pellentesque. Blandit bibendum donec viverra nibh. Eget ultrices gravida eleifend est, blandit mi malesuada pulvinar ut.</p>
                     </div>
@@ -81,6 +82,7 @@
                         <h3 class="text-uppercase text-center mt-4" style="background: white; border-radius: 10px; color: #A6CD99;">Veterinary</h3>
                         <p class="pt-3">Tincidunt dignissim quisque in turpisut nulla eu et. Id eget sit eleifend accumsan lobortis ullamcorper. Odio risus cras in pellentesque. Blandit bibendum donec viverra nibh. Eget ultrices gravida eleifend est, blandit mi malesuada pulvinar ut.</p>
                     </div>
+                    </div>
 
 
                 </div>
@@ -89,12 +91,13 @@
         </section>
 
         <section class="mt-3" style="background: #F8F8F8;">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 mt-4 ml-3">
                         <u3> <h2 style="font-weight: bold;">Client's Feedback</h2> </u>
                     </div>
-                    
+
+                    <div class="row mt-3" style="width: 1300px; margin-left: 150px;">
                     <div class="col-3">
                         <img src="img/image1.jpg" id="client" class="img-fluid" alt="">
                         <h3 id="name">John Doe</h3>
@@ -140,14 +143,15 @@
                             <span style="margin-right: -15px; color: gold;" class="fas fa-star"></span>
                         </p>
                     </div>
+                    </div>
 
                 </div>
             </div>
         </section>
 
         <section>
-            <div class="container">
-                <h3>FAQ's</h3>
+            <div class="container-fluid mt-5">
+                <h3 class="ml-3" style="font-weight: bold;">FAQ's</h3>
 
                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="5000">
                     <div class="carousel-inner">
@@ -200,19 +204,20 @@
 
         </section>
 
-        <footer>
-            <div class="container">
+        <footer class="mt-5" style="background: #F8F8F8;">
+            <div class="container-fluid">
                 <div class="row">
-                    <div class="col-6">
-                        <h3>Find Paw</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Hendrerit malesuada pulvinar consequat risus integer cursus arcu tristique</p>
+                    <div class="col-7">
+                        <h3 class="ml-5 mt-4 text-right" style="width: 100px;">Find Paw</h3>
+                        <p class="ml-3" style="width: 400px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Hendrerit malesuada pulvinar consequat risus integer cursus arcu tristique</p>
                     </div>
 
-                    <p class="col-6 m-auto text-right">
+                    <div class="col-5 m-auto text-right">
+                        <h3>Connect with us</h3>
                         <a href="#" class="col"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" class="col"><i class="fab fa-twitter"></i></a>
                         <a href="#" class="col"><i class="fab fa-instagram"></i></a>
-                    </p>
+                    </div>
 
                     <h5 class="m-auto pt-3">Copyright, Find Paw 2020</h5>
                 </div>
